testsuite/tests/parser/should_fail/T13450TH.hs
{-# LANGUAGE TemplateHaskell #-}

module T13450TH where

example = foo
  where foo = ''
